# crowdsurf

./: .gitignore  .gitmodules  README.md  go.mod
batching/: bucketing.go
batching/dpir/: client.go  common.go  dist_test.go  server.go
batching/pbc/: client.go  common.go  pbc_test.go  server.go
benches/: batching_correctness.go  batching_dpir.go  batching_pbc.go  benches.go  compute_size.go  consts.go  lhe_preprocessing.go  lhe_query.go  lhe_throughput.go  run_benches.py
crypto/: constants.go  params.go
crypto/hint_compr/: client.go  hint_compr_test.go  server.go  socket.go
crypto/lwe/: gauss.go
crypto/rand/: rand.go
crypto/rlwe/: common.cpp  common.h  ffi.h  hybrid.cpp  rlwe.go  rlwe_test.go
lhe/: database.go  database_test.go  lhe.go  lhe_test.go  local.go  simple_client.go  simple_common.go  simple_server.go
matrix/: math.go  matrix.go  matrix.h  matrix64.c  matrix_test.go  squish.go
matrix/gpu/: gpu.go  gpu_test.go
matrix/gpu/cuda/: CMakeLists.txt  ffi.cu  ffi.h  ffi_noop.cpp  gemm.cu
service/: client.go  common.go  e2e_costs.py  hc_server.go  pir_server.go  run_e2e.py  service_test.go  utils.go
